--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -310,9 +310,9 @@
 
   @Manual{muhaz,
     title = {muhaz: Hazard Function Estimation in Survival Analysis},
-    author = {Hess, K. and Gentleman, R.},
+    author = {Hess, K.},
     year = {2010},
-    note = {R package version 1.2.5},
+    note = {R package version 1.2.5, S original by K. Hess and R port by R. Gentleman},
     url = {http://CRAN.R-project.org/package=muhaz},
   }
 
@@ -499,4 +499,15 @@
   pages={4340--4358},
   year={2008},
   publisher={Wiley Online Library}
+}
+
+@article{mandel:simci,
+  title={Simulation-based confidence intervals for functions with complicated derivatives},
+  author={Mandel, Micha},
+  journal={The American Statistician},
+  volume={67},
+  number={2},
+  pages={76--81},
+  year={2013},
+  publisher={Taylor \& Francis}
 }
