--- a/vignettes/flexsurv.bib
+++ b/vignettes/flexsurv.bib
@@ -511,3 +511,19 @@
   year={2013},
   publisher={Taylor \& Francis}
 }
+
+  @Article{deSolve,
+    title = {Solving Differential Equations in R: Package deSolve},
+    author = {Karline Soetaert and Thomas Petzoldt and R. Woodrow Setzer},
+    journal = {Journal of Statistical Software},
+    volume = {33},
+    number = {9},
+    pages = {1--25},
+    year = {2010},
+    coden = {JSSOBK},
+    issn = {1548-7660},
+    url = {http://www.jstatsoft.org/v33/i09},
+    keywords = {ordinary differential equations, partial differential
+    equations, differential algebraic equations, initial value problems,
+    R, FORTRAN, C},
+  }
